deploy: d44d65105a53ddbd776def756da6a29ce3c9662e

--- a/genindex.html
+++ b/genindex.html
@@ -81,7 +81,6 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
- | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -140,6 +139,8 @@
         <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager.add_results">(pyquizhub.core.storage.storage_manager.StorageManager method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.add_tokens">add_tokens() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 
       <ul>
@@ -148,8 +149,6 @@
         <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager.add_tokens">(pyquizhub.core.storage.storage_manager.StorageManager method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.add_users">add_users() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 
       <ul>
@@ -159,8 +158,6 @@
 </li>
       </ul></li>
       <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.answer_question">answer_question() (pyquizhub.core.engine.engine.QuizEngine method)</a>
-</li>
-      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.app_js">app_js() (in module pyquizhub.adapters.web.server)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -353,14 +350,6 @@
   </ul></td>
 </tr></table>
 
-<h2 id="I">I</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.index">index() (in module pyquizhub.adapters.web.server)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -384,8 +373,6 @@
     module
 
       <ul>
-        <li><a href="adapters/web/server.html#module-pyquizhub.adapters.web.server">pyquizhub.adapters.web.server</a>
-</li>
         <li><a href="core/engine.html#module-pyquizhub.core.engine">pyquizhub.core.engine</a>
 </li>
         <li><a href="core/storage.html#module-pyquizhub.core.storage">pyquizhub.core.storage</a>
@@ -397,17 +384,6 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.proxy_request">proxy_request() (in module pyquizhub.adapters.web.server)</a>
-</li>
-      <li>
-    pyquizhub.adapters.web.server
-
-      <ul>
-        <li><a href="adapters/web/server.html#module-pyquizhub.adapters.web.server">module</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pyquizhub.core.engine
 
@@ -415,6 +391,8 @@
         <li><a href="core/engine.html#module-pyquizhub.core.engine">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pyquizhub.core.storage
 
@@ -460,21 +438,13 @@
         <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager.save_session_state">(pyquizhub.core.storage.storage_manager.StorageManager method)</a>
 </li>
       </ul></li>
-      <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager">SQLStorageManager (class in pyquizhub.core.storage.sql_storage)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.start_quiz">start_quiz() (in module pyquizhub.adapters.web.server)</a>
-
-      <ul>
-        <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.start_quiz">(pyquizhub.core.engine.engine.QuizEngine method)</a>
+      <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager">SQLStorageManager (class in pyquizhub.core.storage.sql_storage)</a>
 </li>
-      </ul></li>
+      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.start_quiz">start_quiz() (pyquizhub.core.engine.engine.QuizEngine method)</a>
+</li>
       <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager">StorageManager (class in pyquizhub.core.storage.storage_manager)</a>
-</li>
-      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.style">style() (in module pyquizhub.adapters.web.server)</a>
-</li>
-      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.submit_answer">submit_answer() (in module pyquizhub.adapters.web.server)</a>
 </li>
   </ul></td>
 </tr></table>
