deploy: f88e0ddbfe011764954e6e7c900f4e9e800b6acf

--- a/genindex.html
+++ b/genindex.html
@@ -84,7 +84,6 @@
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
- | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#U"><strong>U</strong></a>
@@ -93,17 +92,13 @@
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.__init__">__init__() (pyquizhub.core.engine.engine.QuizEngine method)</a>
+      <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.__init__">__init__() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 
       <ul>
-        <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.__init__">(pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
-</li>
         <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager.__init__">(pyquizhub.core.storage.sql_storage.SQLStorageManager method)</a>
 </li>
       </ul></li>
       <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager._execute">_execute() (pyquizhub.core.storage.sql_storage.SQLStorageManager method)</a>
-</li>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._get_next_question">_get_next_question() (pyquizhub.core.engine.engine.QuizEngine method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -112,8 +107,6 @@
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager._read_json">_read_json() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 </li>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager._save">_save() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
-</li>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._validate_answer">_validate_answer() (pyquizhub.core.engine.engine.QuizEngine method)</a>
 </li>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager._write_json">_write_json() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 </li>
@@ -157,8 +150,6 @@
         <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager.add_users">(pyquizhub.core.storage.storage_manager.StorageManager method)</a>
 </li>
       </ul></li>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.answer_question">answer_question() (pyquizhub.core.engine.engine.QuizEngine method)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -219,8 +210,6 @@
         <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager.get_all_tokens">(pyquizhub.core.storage.storage_manager.StorageManager method)</a>
 </li>
       </ul></li>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.get_current_question">get_current_question() (pyquizhub.core.engine.engine.QuizEngine method)</a>
-</li>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.get_participated_users">get_participated_users() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 
       <ul>
@@ -353,8 +342,6 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.load_quiz">load_quiz() (pyquizhub.core.engine.engine.QuizEngine method)</a>
-</li>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager.load_session_state">load_session_state() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 
       <ul>
@@ -403,14 +390,6 @@
   </ul></td>
 </tr></table>
 
-<h2 id="Q">Q</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine">QuizEngine (class in pyquizhub.core.engine.engine)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -441,8 +420,6 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager">SQLStorageManager (class in pyquizhub.core.storage.sql_storage)</a>
-</li>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.start_quiz">start_quiz() (pyquizhub.core.engine.engine.QuizEngine method)</a>
 </li>
       <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager">StorageManager (class in pyquizhub.core.storage.storage_manager)</a>
 </li>
