--- a/_modules/index.html
+++ b/_modules/index.html
@@ -73,8 +73,7 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="pyquizhub/core/engine/engine.html">pyquizhub.core.engine.engine</a></li>
-<li><a href="pyquizhub/core/storage/file_storage.html">pyquizhub.core.storage.file_storage</a></li>
+<ul><li><a href="pyquizhub/core/storage/file_storage.html">pyquizhub.core.storage.file_storage</a></li>
 <li><a href="pyquizhub/core/storage/sql_storage.html">pyquizhub.core.storage.sql_storage</a></li>
 <li><a href="pyquizhub/core/storage/storage_manager.html">pyquizhub.core.storage.storage_manager</a></li>
 </ul>
