deploy: 72bcc873578574f93193f280a64edeb56e60af6c

--- a/genindex.html
+++ b/genindex.html
@@ -101,12 +101,16 @@
         <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager.__init__">(pyquizhub.core.storage.sql_storage.SQLStorageManager method)</a>
 </li>
       </ul></li>
+      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._create_api_context">_create_api_context() (pyquizhub.core.engine.engine.QuizEngine method)</a>
+</li>
       <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager._execute">_execute() (pyquizhub.core.storage.sql_storage.SQLStorageManager method)</a>
 </li>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._get_next_question">_get_next_question() (pyquizhub.core.engine.engine.QuizEngine method)</a>
+      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._execute_api_calls">_execute_api_calls() (pyquizhub.core.engine.engine.QuizEngine method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine._get_next_question">_get_next_question() (pyquizhub.core.engine.engine.QuizEngine method)</a>
+</li>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager._load">_load() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
 </li>
       <li><a href="core/storage.html#pyquizhub.core.storage.file_storage.FileStorageManager._read_json">_read_json() (pyquizhub.core.storage.file_storage.FileStorageManager method)</a>
